@@ -14,6 +14,7 @@ Hibernate Plugin:
 
 Bug-Fixes:
 
+2978540: Identifiers starting with '_' where not handled as identifiers by the RSyntax lexer. This resulted in syntax coloring and completion problems. 
 2974533: Informix: Method can be called only once. / ErrorCode: -79
 2965617: Fail to open session with RSyntax editor
 2963371: Splash on 3.1 - copyright (was not updated for 2010)
